@@ -447,6 +447,9 @@
             <input type="checkbox" id="newTurnPerspective">
             <span class="userText" id="t_newTurnPerspective"></span>
           </div>
+          <div class="section">
+            <span class="textButton userText" id="t_restoreDefaultSettings"></span>
+          </div>
         </div>
         <div class="textButton close userText" id="t_settingsClose"></div>
       </div>
